tests/myTests/parserTests/fail/test3.c
#include "Test[3] -> Expected: Fail"
#include "Tests: Struct decl with no var decl"

struct a {

};